<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/fragment_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/init_info_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username"
            app:helperTextEnabled="true"
            app:helperText="@string/fui_required_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/init_info_username_editText"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/init_info_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/age"
            app:helperTextEnabled="true"
            app:helperText="@string/fui_required_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/init_info_age_editText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/init_info_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/height"
                app:helperTextEnabled="true"
                app:helperText="@string/fui_required_field"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/init_info_height_editText"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/init_info_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/weight"
                app:helperTextEnabled="true"
                app:helperText="@string/fui_required_field"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/init_info_weight_editText"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            />

        <RadioButton
            android:id="@+id/male_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            />

        <RadioButton
            android:id="@+id/sedentary_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedentary" />

        <RadioButton
            android:id="@+id/m_active_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderately_active" />

        <RadioButton
            android:id="@+id/active_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active" />

    </LinearLayout>

</ScrollView>
