<resources>
    <string name="app_name">Menu Planner</string>
    <string name="label">Label</string>
    <string name="app_logo">App logo</string>
    <string name="username">Username</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="lastUpdateMenu">lastUpdateMenu</string>
    <string name="userDataLoaded">userDataLoaded</string>
    <string name="renewMenu">renewMenu</string>

    <string name="welcome_text">Welcome to Menu Planner</string>

    <!-- Profile  -->
    <string name="user_info">User info</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="shopping_list">Shopping list</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Init user info -->
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="activity">Physical condition: </string>
    <string name="sedentary">Sedentary</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="active">Active</string>

    <!-- Login -->
    <string name="email">Introduce your email</string>
    <string name="password">Introduce your password</string>
    <string name="password2">Confirm your password</string>
    <string name="button_next">Next</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="invalid_user_password">Invalid email or password</string>

    <!-- SignUp   -->
    <string name="email_used">An account with this email already exists</string>
    <string name="invalid_password">Password must have at least 6 characters</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="unmatched_password">Passwords do not match</string>
    <string name="choose_provider">Choose a provider</string>
    <string name="login_google">Login with Google</string>
    <string name="choose_email">Use your email</string>
    <string name="select_email">Sign in with email</string>

    <!-- Recipe -->
    <string name="readyInMinutes"> %d minutes</string>
    <string name="servings">%d servings</string>
    <string name="sourceUrl">For more info: %s</string>
    <string name="instructions">Instructions: %s</string>
    <string name="ingredients">Ingredients</string>
    <string name="learning_info">Learn</string>
    <string name="recipe_info">Recipe</string>

    <!-- Learn   -->

    <string name="feature_explained">According to your usage you like %s food in your %s</string>
    <string name="calories_explained"></string>
    <string name="calories">This recipe contains %1s calories, which is around a %2$d%% of the total calories you need for today, so you can take up to %3$.1f servings of this recipe.</string>

    <string name="field_empty_error">Empty field</string>
    <string name="age_not_int_error">Age is not a number</string>
    <string name="male">Men</string>
    <string name="female">Women</string>
    <string name="empty_selection">You need to choose %s </string>
    <string name="content_description_media">Food Image</string>
    <string name="day_of_week">Day of week</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for recipes</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>

    <string name="sample_text">Sample Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_unsave">Unsave</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="session">Session</string>
    <string name="button_continue">Continue</string>
    <string name="yesNoMessage">Are you sure?</string>

</resources>
